# videoforge

./: Cargo.toml  LICENSE  models.toml  policy.toml
.github/workflows/: ci.yml
benches/: tile_bench.rs
docs/: ARCHITECTURE.md
src/: lib.rs  main.rs
src/arc/: actuators.rs  coordinator.rs  estimator.rs  mod.rs  policy.rs  telemetry.rs
src/config/: mod.rs
src/pipeline/: decode.rs  encode.rs  inpaint.rs  mask.rs  mod.rs  temporal.rs
tests/: config_tests.rs  pipeline_flow.rs  policy_tests.rs
tests/common/: mod.rs
