[package]
name = "videoforge"
version = "0.1.0"
edition = "2024"
authors = ["Videoforge Contributors"]
description = "Asynchronous video processing and ARC coordination pipeline"
license = "MIT"
readme = "docs/ARCHITECTURE.md"

[features]
default = ["cli"]
cli = []
cuda = ["cust"]

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
cust = { version = "0.3", optional = true }
ffmpeg-next = { version = "6.1", default-features = false, features = ["build"] }
once_cell = "1.19"
onnxruntime = { version = "0.0.14" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "sync", "signal", "fs"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
criterion = "0.5"
insta = { version = "1.38", features = ["toml"] }
serde_yaml = "0.9"
tokio = { version = "1.38", features = ["rt", "macros", "sync"] }

[[bench]]
name = "tile_bench"
harness = false
